# codebase_reader

./: env_sample.txt  main.py  pyproject.toml
repo_qulaity/: metrics.py  scanner.py  score_cal.py
scripts/: github_repo_loader.py  loader.py  retriverAndaug.py  spliiter.py  vd.py
